--- a/fa2025/details/html/week-1-details.html
+++ b/fa2025/details/html/week-1-details.html
@@ -39,6 +39,10 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<p class="lead">
+Welcome to a new week!
+</p>
+<p><em>Details will be updated closer to the week.</em></p>
 <!-- overview-block-begin -->
 <p class="lead">
 Overview of the course, grading, projects and more. Introduction to databases and ER modeling.
@@ -51,14 +55,9 @@ Overview of the course, grading, projects and more. Introduction to databases an
 <!-- resources-block-begin -->
 <h4 id="notes-on-the-resources">Notes on the Resources</h4>
 <p>Review ALL the resources above. Here are some additional notes:</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-12-keys-made-easy-2">Keys made easy</a> Another one of those cool videos. Enjoy!</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-12-joins-part-1-2">Joins - Part 1</a> First of 2 on SQL. Enjoy the entire series! https://www.youtube.com/playlist?list=PLi01XoE8jYojRqM4qGBF1U90Ee1Ecb5tt</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-12-joins-part-2-2">Joins - Part 2</a> Second of 2 on SQL. Enjoy the entire series! https://www.youtube.com/playlist?list=PLi01XoE8jYojRqM4qGBF1U90Ee1Ecb5tt</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-1-databases-on-real-hardware-video-and-notes">Databases on real hardware (video and notes)</a> I REALLY love mainframes! These beasts drive the world, yet they are shunned. This cool video introduces you to a Z16 - VCU owns one!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-1-acid-explained">ACID explained</a> What makes databases different than spreadsheets?While they share many common attributes - and one can use a spreadsheet like a database - there is one HUGE difference … ACID!</p>
 <!-- resources-block-end -->
-<p class="lead">
-Welcome to a new week!
-</p>
-<p><em>Details will be updated closer to the week.</em></p>
 
 
 
