--- a/fa2025/details/html/week-10-details.html
+++ b/fa2025/details/html/week-10-details.html
@@ -43,6 +43,18 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Quiz 5 - SQL basics. Review docker assignment. Introduce homework 6 and building a database from scratch.
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241116">Discussion 4 - SQL Basics</a> SQL Basics</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241139">Homework 7 - Joining tables and reporting</a> extends our first database with new tables and more complicated queries.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
