--- a/fa2025/details/html/week-15-details.html
+++ b/fa2025/details/html/week-15-details.html
@@ -43,6 +43,15 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Fall Break - take it easy!
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
