--- a/fa2025/details/html/week-17-details.html
+++ b/fa2025/details/html/week-17-details.html
@@ -43,6 +43,17 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+This is the last week of school. No class on Monday! Keep focused on finishing out your semester-long project!
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241132">Survey 2 - Course evaluation</a> - course evaluations are important. Submit a pic of your submission screen for points! Thank you for completing the survey!</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
