--- a/fa2025/details/html/week-2-details.html
+++ b/fa2025/details/html/week-2-details.html
@@ -43,6 +43,22 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Database design and entity relation modeling.
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241106">Discussion 1 - ER modeling</a> ER modeling</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241133">Homework 1 - DE Tool Review</a> explores different data tools and how they all fit together.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241146">Practice Quiz 1 - Entity-relation models</a> is the practice quiz for entity-relation models.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-2-quarto-overview">Quarto Overview</a> - You’ll be spending LOTS of time this semester using Quarto. It’s important that you get a feel for how this important data science tool works.</p>
+<!-- resources-block-end -->
 
 
 
