--- a/fa2025/details/html/week-4-details.html
+++ b/fa2025/details/html/week-4-details.html
@@ -43,6 +43,18 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+How do we represent entities and relations on the computer? By using the relational model!
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241109">Discussion 2 - Relational Alg.</a> Relational Alg.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241147">Practice Quiz 2 - Relational Algebra</a> focuses on relational modeling and relational algebra.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
