--- a/fa2025/details/html/week-6-details.html
+++ b/fa2025/details/html/week-6-details.html
@@ -43,6 +43,18 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Redundant content is a challenge in databases. Normalization describes the way we minimize duplicate and redundent content.
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241112">Discussion 3 - Normal forms</a> is a challenging discussion because you need to know about normalization to get started. I HIGHLY recommend that you watch the <em>Normal Forms</em> video in the resources.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241148">Practice Quiz 3 - Analysis and Normal Forms</a> is the practice quiz for Normal Forms. Work this practice quiz in conjunction with homework 4.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
