--- a/fa2025/details/html/week-7-details.html
+++ b/fa2025/details/html/week-7-details.html
@@ -43,6 +43,18 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Finish up normal forms.
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241136">Homework 4 - Analysis and Normal Forms</a> focuses on normal forms and analysis. Successful completion of homework 4 will REALLY help you with Quiz 3!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241127">Quiz 3 - Analysis and Normal Forms - Requires Respondus LockDown Browser + Webcam</a> focuses on normal forms and definitions. Good luck!</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
