--- a/fa2025/details/html/week-8-details.html
+++ b/fa2025/details/html/week-8-details.html
@@ -43,6 +43,19 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Intro to SQL
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241137">Homework 5 - Getting started with SQL</a> is all about getting the software installed and tested. It’s a big job!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241149">Practice Quiz 4 - SQL Basics</a> is the practice quiz for SQL.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241130">Quiz 4 - SQL Basics - Requires Respondus LockDown Browser + Webcam</a> focuses on basic SQL statements and structure. This is the last quiz!!</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
