--- a/fa2025/details/html/welcome-details.html
+++ b/fa2025/details/html/welcome-details.html
@@ -40,7 +40,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 <p class="lead">
-Welcome to CMSC 408!
+Welcome to a new week
 </p>
 <ul class="kl_large_link_grid">
 <li>
@@ -59,7 +59,7 @@ Welcome to CMSC 408!
 <a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-canvas-resources">Canvas Resources</a>
 </li>
 <li>
-<a href="resource-save-you-hours">SAVE YOU HOURS™</a>
+<a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-save-you-hours">SAVE YOU HOURS™</a>
 </li>
 </ul>
 
