--- a/fa2025/details/html/week-11-details.html
+++ b/fa2025/details/html/week-11-details.html
@@ -43,6 +43,17 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+This week we expand our DDL by introducing keys and more. Joins are next on the table (heh heh) as we explore real POWAH of databases!
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241140">Homework 8 - SQL Funhouse</a> explores the SELECT statement and all the different ways to gain insights from raw data using SQL.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
