--- a/fa2025/details/html/week-12-details.html
+++ b/fa2025/details/html/week-12-details.html
@@ -43,6 +43,17 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+More joins and aggregates. Lots MORE!
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241141">Homework 9 - Even more on SQL</a> - enjoyed homework 8? Wait until you work on this one!</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
