--- a/fa2025/details/html/week-3-details.html
+++ b/fa2025/details/html/week-3-details.html
@@ -43,6 +43,18 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Entity-relation models are used to describe databases. Let’s explore!
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241134">Homework 2 - Entity Relation Models</a> offers practice on designing databases.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241119">Quiz 1 - Entity-relation models - Requires Respondus LockDown Browser + Webcam</a> focuses on vocabulary associated with ER models. Don’t forget the practice quiz!</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
