--- a/fa2025/details/html/week-5-details.html
+++ b/fa2025/details/html/week-5-details.html
@@ -43,6 +43,18 @@ ul.task-list li input[type="checkbox"] {
 Welcome to a new week!
 </p>
 <p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-begin -->
+<p class="lead">
+Relational model and relational algebra.
+</p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241135">Homework 3 - Modeling Your World</a> more database specificiation practice.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241122">Quiz 2 - Relational Algebra - Requires Respondus LockDown Browser + Webcam</a> focuses on relational modeling and relational algebra.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
 
 
 
