--- a/fa2025/details/html/week-2-details.html
+++ b/fa2025/details/html/week-2-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-25">
+<meta name="dcterms.date" content="2025-08-26">
 
 <title>Week 2 - Details</title>
 <style>
@@ -35,12 +35,18 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 2 - Details</h1>
 
-<p class="date">2025-08-25</p>
+<p class="date">2025-08-26</p>
 </header>
 
 
 <h4 id="finally-we-get-started">Finally! We get started!</h4>
-<p>This week we’ll ramp up the course rhythm.</p>
+<p>This week we’re emphasizing the weekly course rhythm:</p>
+<ul>
+<li><p>Review the lecture slides and videos, especially the front matter intro.</p></li>
+<li><p>Review the resource notes below and check out the resource links above.</p></li>
+<li><p>Get started on the deliverables EARLY. I set time aside on the Wednesday lecture to answer questions about homeworks and do walkthroughs.</p></li>
+<li><p>Don’t get behind!</p></li>
+</ul>
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241106">Discussion 1 - ER modeling</a> ER modeling</p>
@@ -50,7 +56,12 @@ ul.task-list li input[type="checkbox"] {
 <!-- resources-block-begin -->
 <h4 id="notes-on-the-resources">Notes on the Resources</h4>
 <p>Review ALL the resources above. Here are some additional notes:</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-2-quarto-overview">Quarto Overview</a> - You’ll be spending LOTS of time this semester using Quarto. It’s important that you get a feel for how this important data science tool works.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-database-design">Database design</a> A curated set of videos describing database design and offering examples to help get you started. ER modeling is only one step of the larger process.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-er-modeling">ER Modeling</a> A curated set of videos providing greater detail on difference aspects of ER modeling, including entities, attributes, relationships, cardinality and participation.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-2-quarto-overview">Quarto Overview</a> You’ll be spending LOTS of time this semester using Quarto. It’s important that you get a feel for how this important data science tool works.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-wsl-tools">WSL Tools</a> Windows Subsystem for Linux (WSL) is a great tool to learn. You get all the features of a linux system, without having to give up all the Windows tools, utilities, and of course … games!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-git-tools">GIT Tools</a> Learning GIT and GITHUB is really, really important to your success in this class. I assembled these videos to help you get started.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241146">Practice Quiz 1</a> You can take the practice quiz as many times as you like. The real quiz will be exactly the same, except you’ll need the lockdown browser.</p>
 <!-- resources-block-end -->
 
 
