--- a/fa2025/details/html/week-4-details.html
+++ b/fa2025/details/html/week-4-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-11">
+<meta name="dcterms.date" content="2025-09-08">
 
 <title>Week 4 - Details</title>
 <style>
@@ -35,25 +35,24 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 4 - Details</h1>
 
-<p class="date">2025-08-11</p>
+<p class="date">2025-09-08</p>
 </header>
 
 
-<p class="lead">
-Welcome to a new week!
-</p>
-<p><em>Details will be updated closer to the week.</em></p>
-<!-- overview-block-begin -->
-<p class="lead">
-How do we represent entities and relations on the computer? By using the relational model!
-</p>
-<!-- overview-block-end -->
+<p>This week we transition from ER models, finishing up with homework 3 to relational models and relational algebra.</p>
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241109">Discussion 2 - Relational Alg.</a> Relational Alg.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1289931">Discussion 2 - CANCELLED</a> This discussion has been cancelled.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241135">Homework 3 - Modeling Your World</a> more database specificiation practice.</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241147">Practice Quiz 2 - Relational Algebra</a> focuses on relational modeling and relational algebra.</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-relational-data-model">Relational data model</a> A brief introduction to the relational model.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-example-translation">Example translation</a> A worked example converting an ER diagram to a relational schema.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-relational-db-intro">Relational DB intro</a> From IBM Cloud, this video provides an introduction to relational databases.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-keys-and-more-keys">Keys and more keys</a> Another video from Decomplexify - laying out different key types!</p>
 <!-- resources-block-end -->
 
 
