week 5 and lecture 07 draft

--- a/fa2025/details/html/week-5-details.html
+++ b/fa2025/details/html/week-5-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-11">
+<meta name="dcterms.date" content="2025-09-15">
 
 <title>Week 5 - Details</title>
 <style>
@@ -35,14 +35,15 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 5 - Details</h1>
 
-<p class="date">2025-08-11</p>
+<p class="date">2025-09-15</p>
 </header>
 
 
 <p class="lead">
-Welcome to a new week!
+Week 5 - more on relational algebra
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<p>The relational model gives a way to store data - tables, rows, keys, and all that. So - what do we do with all that stuff?</p>
+<p>Relational algebra gives the tools to describe on paper and implement in the computer operations that manipulate our relations, that is, our tables and rows.</p>
 <!-- overview-block-begin -->
 <p class="lead">
 Relational model and relational algebra.
@@ -50,10 +51,15 @@ Relational model and relational algebra.
 <!-- overview-block-end -->
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241135">Homework 3 - Modeling Your World</a> more database specificiation practice.</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241122">Quiz 2 - Relational Algebra - Requires Respondus LockDown Browser + Webcam</a> focuses on relational modeling and relational algebra.</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-relational-data-model">Relational data model</a> A brief introduction to the relational model.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-example-translation">Example translation</a> A worked example converting an ER diagram to a relational schema.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-relational-db-intro">Relational DB intro</a> From IBM Cloud, this video provides an introduction to relational databases.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-keys-and-more-keys">Keys and more keys</a> Another video from Decomplexify - laying out different key types!</p>
 <!-- resources-block-end -->
 
 
