--- a/fa2025/details/html/week-6-details.html
+++ b/fa2025/details/html/week-6-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-11">
+<meta name="dcterms.date" content="2025-09-22">
 
 <title>Week 6 - Details</title>
 <style>
@@ -35,14 +35,10 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 6 - Details</h1>
 
-<p class="date">2025-08-11</p>
+<p class="date">2025-09-22</p>
 </header>
 
 
-<p class="lead">
-Welcome to a new week!
-</p>
-<p><em>Details will be updated closer to the week.</em></p>
 <!-- overview-block-begin -->
 <p class="lead">
 Redundant content is a challenge in databases. Normalization describes the way we minimize duplicate and redundent content.
@@ -51,9 +47,16 @@ Redundant content is a challenge in databases. Normalization describes the way w
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241112">Discussion 3 - Normal forms</a> is a challenging discussion because you need to know about normalization to get started. I HIGHLY recommend that you watch the <em>Normal Forms</em> video in the resources.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241136">Homework 4 - Analysis and Normal Forms</a> focuses on normal forms and analysis. Successful completion of homework 4 will REALLY help you with Quiz 3!</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241148">Practice Quiz 3 - Analysis and Normal Forms</a> is the practice quiz for Normal Forms. Work this practice quiz in conjunction with homework 4.</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-6-normal-forms">Normal Forms</a> is probably the <em>MOST IMPORTANT</em> video you can watch this week. It very cleanly describes normal forms and why they’re important. Watch this <em>before</em> you tackle the discussion assignment.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-6-bcnf">BCNF</a> is another video from Decomplexify (the author of the normal forms video). This video describes <em>Boyce-Codd Normal Form</em> or <em>BCNF</em>.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-6-keys-and-more-keys">Keys and more keys</a> provides an overview of <em>all</em> the different kinds of database keys.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-6-denormalization">Denormalization</a> is a change of pace. While we’ve been spending all of our time <em>normalizing</em> databases, sometime we need to <em>denormalize</em> them! Check it out!</p>
 <!-- resources-block-end -->
 
 
