--- a/fa2025/details/html/week-6-details.html
+++ b/fa2025/details/html/week-6-details.html
@@ -39,6 +39,10 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<h4 id="week-6---changes-to-the-schedule">Week 6 - Changes to the schedule!</h4>
+<ul>
+<li>Monday lecture is deferred. Rather, I ask that you attend and participate in the <a href="https://virginiacommonwealth.instructure.com/courses/122236/discussion_topics/1085317">Computer Science Club Night</a>. I sent out an announcement to the class via email. Check it out!</li>
+</ul>
 <!-- overview-block-begin -->
 <p class="lead">
 Redundant content is a challenge in databases. Normalization describes the way we minimize duplicate and redundent content.
@@ -47,7 +51,6 @@ Redundant content is a challenge in databases. Normalization describes the way w
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241112">Discussion 3 - Normal forms</a> is a challenging discussion because you need to know about normalization to get started. I HIGHLY recommend that you watch the <em>Normal Forms</em> video in the resources.</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241136">Homework 4 - Analysis and Normal Forms</a> focuses on normal forms and analysis. Successful completion of homework 4 will REALLY help you with Quiz 3!</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241148">Practice Quiz 3 - Analysis and Normal Forms</a> is the practice quiz for Normal Forms. Work this practice quiz in conjunction with homework 4.</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
