--- a/fa2025/details/html/week-7-details.html
+++ b/fa2025/details/html/week-7-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-11">
+<meta name="dcterms.date" content="2025-09-29">
 
 <title>Week 7 - Details</title>
 <style>
@@ -35,25 +35,30 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 7 - Details</h1>
 
-<p class="date">2025-08-11</p>
+<p class="date">2025-09-29</p>
 </header>
 
 
-<p class="lead">
-Welcome to a new week!
-</p>
-<p><em>Details will be updated closer to the week.</em></p>
-<!-- overview-block-begin -->
-<p class="lead">
-Finish up normal forms.
-</p>
-<!-- overview-block-end -->
+<h4 id="oh---will-it-ever-end">Oh - will it ever end?</h4>
+<p>We’re plowing through all the normal form concepts, vocabulary, algorithms and examples. It’s a lot.</p>
+<p>How will it help? Understanding normal forms can help you design efficient and accurate databases.</p>
+<p>Will you ever need to normalize a database? Heck yeah! If you do any data science at all, you’ll often receive dirty and denormal data. Data cleaning is all about cleaning the data and then … wait for it … NORMALIZING it so that you can be assured it’s even cleaner!</p>
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241136">Homework 4 - Analysis and Normal Forms</a> focuses on normal forms and analysis. Successful completion of homework 4 will REALLY help you with Quiz 3!</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241127">Quiz 3 - Analysis and Normal Forms - Requires Respondus LockDown Browser + Webcam</a> focuses on normal forms and definitions. Good luck!</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://vertabelo.com/blog/closure-of-a-set-of-attributes/">Closures w/ examples</a> - closures. Umhhh. What is a closure? It’s KEY to identifying KEYS! (that’s a joke, y’all)</p>
+<p><a href="https://www.geeksforgeeks.org/normal-forms-in-dbms/">Normal Forms (text)</a> for those of you who want something more “texty”.</p>
+<p><a href="https://medium.com/@ndleah/a-brief-guide-to-database-normalization-5ac59f093161">Normalization article</a> - this article is really cool. It provides REAL EXAMPLES of normal forms - all the way through 5NF! It’s worth a review.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-7-normal-forms">Normal Forms</a> is probably the <em>MOST IMPORTANT</em> video you can watch this week. It very cleanly describes normal forms and why they’re important. Watch this <em>before</em> you tackle the discussion assignment.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-7-bcnf">BCNF</a> is another video from Decomplexify (the author of the normal forms video). This video describes <em>Boyce-Codd Normal Form</em> or <em>BCNF</em>.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-7-keys-and-more-keys">Keys and more keys</a> provides an overview of <em>all</em> the different kinds of database keys.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-7-denormalization">Denormalization</a> is a change of pace. While we’ve been spending all of our time <em>normalizing</em> databases, sometime we need to <em>denormalize</em> them! Check it out!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-save-you-hours">SAVE YOU HOURS™</a> - my tips and tricks are still relevant. Please review!</p>
 <!-- resources-block-end -->
 
 
