--- a/fa2025/details/html/week-8-details.html
+++ b/fa2025/details/html/week-8-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-11">
+<meta name="dcterms.date" content="2025-10-06">
 
 <title>Week 8 - Details</title>
 <style>
@@ -35,26 +35,25 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 8 - Details</h1>
 
-<p class="date">2025-08-11</p>
+<p class="date">2025-10-06</p>
 </header>
 
 
-<p class="lead">
-Welcome to a new week!
-</p>
-<p><em>Details will be updated closer to the week.</em></p>
-<!-- overview-block-begin -->
-<p class="lead">
-Intro to SQL
-</p>
-<!-- overview-block-end -->
+<h4 id="and-now-for-something-totally-different">And now for something totally different!</h4>
+<p>We’re leaving the world of modeling and heading to the world of coding. This week our focus is on getting the tools and connections all working.</p>
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241137">Homework 5 - Getting started with SQL</a> is all about getting the software installed and tested. It’s a big job!</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241149">Practice Quiz 4 - SQL Basics</a> is the practice quiz for SQL.</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241130">Quiz 4 - SQL Basics - Requires Respondus LockDown Browser + Webcam</a> focuses on basic SQL statements and structure. This is the last quiz!!</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://vcu-ssg.github.io/ssg-quarto-python-setup/">SQL tool setup</a> Helpful walkthrough and tutorial for software tool installation!!! (yes, this website was created using quarto.)</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-8-phpmyadmin">PhpMyAdmin</a> A good overview of PhyMyAdmin.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-8-mac-installing-pyenv">MAC - installing pyenv</a> OK video on installing pyenv on a mac. Easy to follow.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-8-pc-installing-pyenv">PC - installing pyenv</a> Installing pyenv on a PC.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-8-intro-to-poetry">Intro to poetry</a> Poetry is a GREAT tool for managing dependencies and virtual environments. It combines SetupTools and VENV into one simple program to use.</p>
 <!-- resources-block-end -->
 
 
